Changelog
=========

2.1.5 (unreleased)
------------------

- Don't declare IIterateAware as an extension of Archetypes' IReferenceable,
  because there are other implementations (such as the one for Dexterity)
  that don't use Archetypes references.
  [davisagli]


2.1.4 (2011-11-24)
------------------

- Preserve content contents UIDs when checking a folder back in.  This
  prevents breaking linking by UID in the editor.
  [rossp]

- Fix a problem with items added to a checked out folder not being
  visible after checkin.  Fixes #12257.
  [rossp]

- Preserve the folder order position from the item originally checked
  out when checking it back in.
  [rossp]

- Allow user of check'd out content to also see the checkout info so
  a contributor can see that he already has a page checked out
  easily.
  [vangheem]


2.1.3 (2011-08-31)
------------------

- Remove rogue div tag from diff.pt. This fixes
  http://dev.plone.org/plone/ticket/11249
  [danjacka]

2.1.2 - 2011-06-02
------------------

- Include Products.CMFCore for Plone 4.1 compatibility.
  [thomasdesvenain, WouterVH]

2.1.1 - 2011-05-13
------------------

- Fixed an issue where our subscriber always expected a coci_created attribute
  to be available at the policy.
  [erico_andrei]

- Add MANIFEST.in.
  [WouterVH]

- Viewing a working copy or an original of a checkout does not raise
  AttributeError anymore. Anyway, we log a warning because a Manager should do
  something about this. Fixes http://dev.plone.org/plone/ticket/8723
  [glenfant]


2.1 - 2011-02-25
----------------

- No changes.


2.1a2 - 2011-02-14
------------------

- Fixed stale catalog entries appearing for references of merged
  content.
  [maurits]

- Fixed minor test failure for ``_doAddUser``.
  [maurits]


2.1a1 - 2011-01-18
------------------

- Test Products.CMFPlone version to set default permission, keeping 4.0
  compatibility - the next release can be 2.0.1 again.
  [elro]

- Add autoinclude entry point.
  [elro]
