@@ -21,6 +21,15 @@
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
 
+    <genericsetup:registerProfile
+        name="test"
+        title="plone.app.iterate: Test fixture"
+        directory="profiles/test"
+        description="Extension profile to configure a test fixture"
+        for="Products.CMFPlone.interfaces.ITestCasePloneSiteRoot"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />       
+
     <genericsetup:upgradeStep
         source="*"
         destination="121"
