@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_placeful_workflow" meta_type="Placeful Workflow Tool">
+    <property name="title"></property>
+    <property name="max_chain_length" type="int">1</property>
+    <object name="working-copy" meta_type="WorkflowPolicy" />
+</object>
