@@ -1,0 +1,170 @@
+<?xml version="1.0"?>
+<dc-workflow xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:domain="plone" workflow_id="workingcopy_workflow"
+    title="test wc workflow" state_variable="review_state" initial_state="draft-copy" i18n:attributes="title">
+
+    <!-- These are the permissions being managed -->
+    <permission>Delete objects</permission>
+    <permission>iterate : Check in content</permission>
+    <permission>iterate : Check out content</permission>
+    <permission>View</permission>
+    <permission>Access contents information</permission>
+    <permission>Change portal events</permission>
+    <permission>Modify portal content</permission>
+    <permission>Copy or Move</permission>
+
+    <!-- The various workflow states, with their permission maps -->
+    <state state_id="draft-copy" title="Draft (copy)" i18n:attributes="title">
+        <description i18n:translate="">New version created but not ready for publication</description>
+        <exit-transition transition_id="submit-copy-for-publication" />
+        <permission-map name="Access contents information" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Contributor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="Change portal events" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Contributor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="Modify portal content" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Contributor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="View" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Contributor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="iterate : Check in content" acquired="False" />
+        <permission-map name="iterate : Check out content" acquired="False" />
+        <permission-map name="Copy or Move" acquired="False" />
+        <permission-map name="Delete objects" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Contributor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+    </state>
+    
+    <state state_id="pending-copy" title="Pending (copy)" i18n:attributes="title">
+        <description i18n:translate="">Copy submitted for publication - pending approval</description>
+        <exit-transition transition_id="withdraw-submitted-copy" />
+        <exit-transition transition_id="reject-submitted-copy" />
+        <permission-map name="Access contents information" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Contributor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="Change portal events" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="Modify portal content" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="View" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Contributor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="iterate : Check in content" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>
+        <permission-map name="iterate : Check out content" acquired="False" />
+        <permission-map name="Copy or Move" acquired="False" />
+        <permission-map name="Delete objects" acquired="False">
+            <permission-role>Editor</permission-role>
+            <permission-role>Site Administrator</permission-role>
+            <permission-role>Contributor</permission-role>
+            <permission-role>Manager</permission-role>
+        </permission-map>        
+    </state>
+
+    <!-- Transitions between states, including guard conditions -->
+    <transition transition_id="submit-copy-for-publication" new_state="pending-copy" title="Submit draft content for publication" trigger="USER"
+        before_script="" after_script="" i18n:attributes="title">
+        <description i18n:translate="">
+            Move the content to the pending state where it will be reviewed by an editor by publication.
+        </description>
+        <action url="%(content_url)s/content_status_modify?workflow_action=submit-copy-for-publication" category="workflow"
+            i18n:translate="">Submit</action>
+        <guard>
+            <guard-permission>Modify portal content</guard-permission>
+        </guard>
+    </transition>
+    <transition transition_id="reject-submitted-copy" new_state="draft-copy" title="Editor rejects submitted content"
+        trigger="USER" before_script="" after_script="" i18n:attributes="title">
+        <description i18n:translate="">
+            Revert to draft.
+        </description>
+        <guard>
+            <guard-permission>Review portal content</guard-permission>
+        </guard>
+    </transition>
+    <transition transition_id="withdraw-submitted-copy" new_state="draft-copy" title="Contributor withdraws submitted content"
+        trigger="USER" before_script="" after_script="" i18n:attributes="title">
+        <description i18n:translate="">
+            Revert to draft.
+        </description>
+        <guard>
+            <guard-role>Contributor</guard-role>
+        </guard>
+    </transition>
+
+    <!-- Workflow variables, managed as part of workflow history -->
+    <variable variable_id="action" for_catalog="False" for_status="True" update_always="True">
+        <description>The last transition</description>
+        <default>
+            <expression>transition/getId|nothing</expression>
+        </default>
+        <guard>
+        </guard>
+    </variable>
+    <variable variable_id="actor" for_catalog="False" for_status="True" update_always="True">
+        <description>The ID of the user who performed the last transition</description>
+        <default>
+            <expression>user/getId</expression>
+        </default>
+        <guard>
+        </guard>
+    </variable>
+    <variable variable_id="comments" for_catalog="False" for_status="True" update_always="True">
+        <description>Comments about the last transition</description>
+        <default>
+            <expression>python:state_change.kwargs.get('comment', '')</expression>
+        </default>
+        <guard>
+        </guard>
+    </variable>
+    <variable variable_id="review_history" for_catalog="False" for_status="False" update_always="False">
+        <description>Provides access to workflow history</description>
+        <default>
+            <expression>state_change/getHistory</expression>
+        </default>
+        <guard>
+            <guard-permission>Request review</guard-permission>
+            <guard-permission>Review portal content</guard-permission>
+        </guard>
+    </variable>
+    <variable variable_id="time" for_catalog="False" for_status="True" update_always="True">
+        <description>Time of the last transition</description>
+        <default>
+            <expression>state_change/getDateTime</expression>
+        </default>
+        <guard>
+        </guard>
+    </variable>
+
+</dc-workflow>
