@@ -8,6 +8,10 @@ Changelog
   because there are other implementations (such as the one for Dexterity)
   that don't use Archetypes references.
   [davisagli]
+  
+- Security permissions of working copy workflow don't get applied on checking 
+  out content http://dev.plone.org/ticket/12780
+  [anthonygerrard]
 
 
 2.1.4 (2011-11-24)
